# fastapi-practise

./: README.md  pyproject.toml
