[tool.poetry]
name = "fastapi-practise"
version = "0.1.0"
description = ""
authors = ["nikitalevshuk <levshukn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
